--- a/login.css
+++ b/login.css
@@ -4,23 +4,23 @@ body {
 
 #login-panel {
     margin: auto;
-    margin-top: 18vw;
-    width: 30vw;
-    height: 14vw; 
+    margin-top: 30vh;
+    width: 500px;
+    height: 300px; 
     text-align: center;
 }
 
 input {
     margin: auto;
     display: block;
-    width: 60%;
-    height: 20%;
-    padding-left: 4%;
-    padding-right: 4%;
+    width: 320px;
+    height: 45px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: #a67ee6;
     border: 3px solid #9590a3;
     background-color: transparent;
-    margin-top: 8%;
+    margin-top: 15px;
     font-size: 110%;
 }
 
@@ -33,9 +33,9 @@ button {
     border: 3px solid #9590a3;
     background-color: transparent;
     color: #a67ee6;
-    width: 24%;
-    height: 26%;
-    margin-top: 8%;
+    width: 120px;
+    height: 45px;
+    margin-top: 25px;
     font-size: 100%;    
 }
 
