change color scheme

--- a/chat.css
+++ b/chat.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #320e6c;
+    background-color: #2D767F;
     text-align: center;
 }
 
@@ -11,8 +11,8 @@ input {
     padding: 0;
     padding-left: 10px;
     padding-right: 10px;
-    color: #a67ee6;
-    border: 3px solid #9590a3;
+    color: #B4F1F1;;
+    border: 3px solid #ECFFFB;
     background-color: transparent;
     font-size: 80%;
 }
@@ -30,17 +30,17 @@ input:focus {
 .message {
     padding: 8px;
     display: inline;
-    background-color: #9590a3;
-    color: #320e6c;
+    background-color: #ECFFFB;
+    color: #2D767F;
     border-radius: 5px;
 }
 
 .selfMessage {
     padding: 8px;
     display: inline;
-    background-color: transparent;
-    color: #9590a3;
-    border: 1.5px solid #9590a3;
+    background-color: #B4F1F1;
+    color: #2D767F;
+    border: 1.5px solid #2D767F;
     border-radius: 5px;
 }
 
@@ -61,30 +61,30 @@ button {
     display: inline;
     width: 50px;
     height: 36px;
-    color: #9590a3;
-    border: 3px solid #9590a3;
+    color: #B4F1F1;
+    border: 3px solid #ECFFFB;
     background-color: transparent;
     font-size: 80%;
 }
 
 button:hover {
-    color: #a67ee6;
+    border-color: #B4F1F1;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: #9590a3;
+    color: #ECFFFB;
 }
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color: #9590a3;
+    color: #ECFFFB;
     opacity: 1;
 }
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color: #9590a3;
+    color: #ECFFFB;
     opacity: 1;
 }
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #9590a3;
+    color: #ECFFFB;
 }
 :placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
-    color: #9590a3;
+    color: #ECFFFB;
 }
