--- a/chat.css
+++ b/chat.css
@@ -24,6 +24,7 @@ input:focus {
 
 #messagesDiv {
     width: 450px;
+    height: 90vh;
     max-height: 90vh;
     overflow-y: auto;
     margin: auto;
