--- a/chat.css
+++ b/chat.css
@@ -6,7 +6,7 @@ body {
 h1 {
     color: white;
     font-size: 30px;
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 input {
@@ -53,6 +53,11 @@ input:focus {
     opacity: 0.8;
     background-color: #B4F1F1;
     border-radius: 4px;
+}
+
+p {
+    font-family: sans-serif;
+    font-size: 14px;
 }
 
 .message {
