--- a/login.css
+++ b/login.css
@@ -9,10 +9,17 @@ body {
     text-align: center;
 }
 
+#register-panel {
+    margin: auto;
+    margin-top: 20vh;
+    width: 500px;
+    text-align: center;
+}
+
 input {
     margin: auto;
     display: block;
-    width: 320px;
+    width: 348px;
     height: 45px;
     padding-left: 20px;
     padding-right: 20px;
